# eval-suite

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml  (+2 more)
docs/: calibration_writeup.md  plugin_authoring.md  real_to_sim.md  ros2_deployment.md  screen_recording_script.md
examples/: calibration_pickcoke_rt1.py  gate_smolvla_deployment.py  lerobot_smolvla_pickcoke.py  namaqualand_sweep.py
examples/external_plugin_demo/: README.md  pyproject.toml
examples/external_plugin_demo/plugin_demo/: __init__.py  household_task.py  industrial_policy.py
examples/external_plugin_demo/tests/: test_conformance.py
scripts/: bench_amortization.py  run_full_sweep.sh  run_go1_sweep.py  run_widowx_resweep.sh
takehome/: EXTENSION.md  profile.ipynb
tests/: test_calibration_registry.py  test_calibration_statistics.py  test_canonical_taxonomy.py  test_conformance_kit.py  test_contracts.py  test_cross_device_corroboration.py  test_ingest_cli_dispatch.py  test_ingest_objaverse.py  test_ingest_rgbd.py  test_lerobot_interop.py  test_manifest_schema_evolution.py  test_mujoco_playground_adapter_accepts_parametric_splat.py  test_mujoco_playground_contract.py  test_oxe_replay.py  test_paired_trials_sidecar.py  test_parametric_splat_contract.py  test_plugin_provenance.py  test_portal.py  test_profile_gate.py  test_registry.py  test_signing.py  test_splat_ingest_annotation.py  test_splat_ingest_extract.py  test_success_predicates.py  test_sweep_contract.py  test_tnt_truck_asset_provenance.py  test_topic_spec.py  test_usd_scan_contract.py
(+32 files in other folders)
